//$Id$

CCK 6.2-dev
===========

- #316656 Default weight must be zero, not NULL, or form ordering will be incorrect.
- #107407 by dopry, optimization patch, do nothing in hook_form_alter() and hook_nodeapi() if there are no fields.
- #317932 Fix userreference documentation typo.

CCK 6.2-rc9
===========

- Change update instructions to recommend leaving CCK modules out of the modules folder until they're enabled.
- #317036 by hass, context-sensitive translation fixes.
- #316354 by fago, hass, fix translation issues in rules.inc files.
- #312546 by stella, code cleanup.
- #311146 by Brian294, dheffron, yched, and others, fix critical javascript problem in new Manage fields UI screen in some themes.
- #317032 by hass, code cleanup.

CCK 6.2-rc8
===========

Be sure to visit update.php after uploading this release.

- #314986 by moshe weitzman, remove hook_devel_caches(), deprecated in favor of content_flush_caches().
- Clean up inconsistencies in unsetting _error_element, sometimes not unsetting it, sometimes not testing before unsetting it causing undefined index errors.
- Add more documentation of how nested nodereference and userreference items work.
- #119102 Combo field prep, Use === in userreference and nodereference validation to be sure we get right results if parent is a zero (delta) value instead of a string name.
- #119102, #314843 Make sure module process code doesn't override #element_validate set by other modules.
- #119102 Combo field prep, rework fieldgroup name validation into API to be used by other modules.
- #312546 by stella - Change some links to make translation easier.
- Added the #delta value to the wrong place in the element, it was inaccessible to the formatter theme.
- #119102 Combo field prep, rework the field overview form so it can hanle other kinds of groups.
- #119102 Combo field prep, add hooks to the fieldgroup module so other modules can alter group info.