@@ -44,7 +44,7 @@ function content_flush_caches() {
  * Implementation of hook_init().
  */
 function content_init() {
-  drupal_add_css(drupal_get_path('module', 'content') .'/theme/content.css');
+  drupal_add_css(drupal_get_path('module', 'content') .'/theme/content-module.css');
   if (module_exists('token') && !function_exists('content_token_values')) {
     module_load_include('inc', 'content', 'includes/content.token');
   }
